diverse anpassungen an jugendliche

--- a/chunk_includes/information.html
+++ b/chunk_includes/information.html
@@ -12,30 +12,30 @@
     verarbeiten.
 </p>
 <p>
-    Wir laden Sie hiermit ein, an unserer Studie teilzunehmen. Die Teilnahme
-    ist freiwillig. Möchten Sie nicht an unserer Studie teilnehmen, werden
-    Ihnen daraus keinerlei Nachteile entstehen. Bevor Sie sich entscheiden, ob
-    Sie an unserer Studie teilnehmen möchten, lesen Sie bitte folgende
-    Informationen sorgfältig durch und besprechen Sie dies mit anderen
-    Personen, falls Sie dies wünschen. Sollten Sachverhalte unklar sein oder
-    Sie weitere Fragen haben, zögern Sie nicht, nachzufragen. Wir geben Ihnen
+    Wir laden dich hiermit ein, an unserer Studie teilzunehmen. Die Teilnahme
+    ist freiwillig. Möchtest du nicht an unserer Studie teilnehmen, wird
+    dir daraus keinerlei Nachteile entstehen. Bevor du dich entscheidest, ob
+    du an unserer Studie teilnehmen möchtest, lies bitte folgende
+    Informationen sorgfältig durch und hol die Einverständnis deiner Eltern ein. 
+    Sollten Sachverhalte unklar sein oder
+    du (oder deine Eltern) weitere Fragen haben, zögere nicht, nachzufragen. Wir geben 
     gerne Auskunft.
 </p>
 <p>
-    Sie können uns unter der Email:
+    Wir sind unter der Email:
     <a href="mailto:namdeutsch-sfb1412@hu-berlin.de">
         namdeutsch-sfb1412@hu-berlin.de
     </a>
-    erreichen.
+    erreichbar.
 </p>
 <p>
     <strong>Details der Studie</strong>
 </p>
 <p>
-    In der Studie werden Sie einen <strong>kurzen Zeitungsartikel lesen und diesen ggf.
-    korrigieren </strong>. Außerdem werden wir Sie bitten, einen Fragebogen auszufüllen,
+    In der Studie wirst du einen <strong>kurzen Zeitungsartikel lesen und diesen ggf.
+    korrigieren </strong>. Außerdem werden wir dich bitten, einen Fragebogen auszufüllen,
     über den wir einige persönliche Angaben (z.B. Alter, Geschlecht, Beruf)
-    sowie Informationen zu den von Ihnen gesprochenen Sprachen und über Ihren
+    sowie Informationen zu den von dir gesprochenen Sprachen und über deinen
     Sprachgebrauch erfahren, die uns bei unserer Studie helfen können.
 </p>
 <p>
@@ -45,13 +45,21 @@
     werden nur Anhand eines Codes identifiziert.
 </p>
 <p>
-    Auf der nächsten Seite erhalten Sie genaue Informationen zu Widerruf,
-    Weiterverwertung der Daten und den Betroffenenrechten. Bitte lesen sie
+    Auf der nächsten Seite erhälst du genaue Informationen zu Widerruf,
+    Weiterverwertung der Daten und den Betroffenenrechten. Bitte lies 
     diese Ausmerksam durch.
 </p>
 <p>
-    <strong><font color=#DF0101>Diese Version des Experiments ist für Teilnehmer*innen über 18 Jahre. Die Version
-    für Teilnehmer*innen zwischen 14 und 18 findet sich <a href="https://korpling.german.hu-berlin.de/ibexexps/SFB1412C07/Zeitungsstudie_Jugendliche/experiment.html">hier</a></font></strong>
+    <strong><font color=#DF0101>Diese Version des Experiments ist für Teilnehmer*innen unter 18. Die Version
+    für Teilnehmer*innen über 18 findet sich <a href="https://korpling.german.hu-berlin.de/ibexexps/SFB1412C07/Zeitung_De/experiment.html">hier</a></font></strong>
+
+</p>
+<p>
+    <strong><font color=#DF0101>Die Informationen zum Experiment und zu allen rechtlichen Fragen können 
+     <a href="https://amor.cms.hu-berlin.de/home/session/public_html/zeitungsstudie/Information_Einverst%C3%A4ndnis_Datenschutz_Jugendliche_D.pdf">hier</a> 
+     für deine Eltern heruntergeladen werden. <br>
+     Bitte lade auch <a href=>diese Einwilligungserklärung</a>  
+     herunter und lass deine Eltern unterschreiben. Die ausgefüllte Einwilligungserklärung anschliessend bitte <a href="https://box.hu-berlin.de/u/d/d01881378a224e088cb7/"> hier hochladen</a> </font></strong>
 
 </p>
 </div>
