--- a/chunk_includes/zustimmung.html
+++ b/chunk_includes/zustimmung.html
@@ -5,30 +5,11 @@
 
     <li>Ich erkläre mich freiwillig zur Teilnahme an der geplanten Untersuchung
     bereit.</li><br>
-    <li>Mir ist bekannt, dass ich das Proband*inneninformationsblatt und die Einwilligungserklärung unter dem 
-    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Probandeninformation%20und%20Einverst%c3%a4ndnis.pdf">Link</a> 
-    herunterladen kann</li><br>
+    <li>Meine Eltern haben die Probandeninformation  
+    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Information_Einverst%c3%a4ndnis_Datenschutz_Jugendliche_D.pdf">heruntergeladen</a> 
+    und zur Kenntnis genommen</li><br>
   
-   <li>Ich willige darin ein, dass
-    meine Daten, wie in dem Proband*inneninformationsblatt beschrieben,
-    verarbeitet werden, die Untersuchungsdatensätze in anonymer Form auf einem
-    Datenportal gelistet und meine anonymisierten (biometrischen<sup>1</sup>
-    und nicht biometrischen) Untersuchungsdaten in einem
-    Forschungsdatenrepositorium gespeichert werden. Meine Daten werden nur für
-    das oben beschriebene, wissenschaftliche Projekt und zu keinem anderen
-    Zweck verarbeitet.</li><br>
+   <li>Die  <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Einverst%c3%a4ndnis_Jugendliche_D.pdf">Einwilligungserklärung</a>wurde auf die <a href="https://box.hu-berlin.de/u/d/d01881378a224e088cb7/">HU-Box geladen</a></li><br>
 
-   <li>Darüber hinaus bin ich damit einverstanden, dass über das
-    Forschungsdatenrepositorium meine anonymisierten (biometrischen<sup>1</sup> und nicht biometrischen)
-    Untersuchungsdaten Wissenschaftler*innen außerhalb dieses Projektes für
-    wissenschaftliche Zwecke und unter Einhaltung der im Informationsblatt
-    beschriebenen Datenverarbeitungsschritte zur Verfügung gestellt werden.
-    mein anonymisierter Datensatz außerhalb dieses Projektes zur weiteren
-    Nutzung der Öffentlichkeit zur Verfügung gestellt wird. Dies gilt
-    ausschließlich für nicht-biometrische Daten<sup>1</sup>. </li><br>
-
-   <li>Ich habe  einen Code erstellt und
-    willige ein, dass meine Datensätze, die zu unterschiedlichen Zeitpunkten
-    entstehen, mittels dieses Codes miteinander verknüpft werden dürfen.</li>
    </div> 
     
