--- a/chunk_includes/code.html
+++ b/chunk_includes/code.html
@@ -1,7 +1,7 @@
 <div align=justify>
 <p>
     <strong>Wie vorher beschrieben werden die Daten nur anonymisiert gepeichert und weiterverarbeitet. Hierzu 
-    generieren Sie bitte einen 10-stelligen Code nach dem folgenden Muster:</strong>
+    erstelle bitte einen 10-stelligen Code nach dem folgenden Muster:</strong>
 </p>
 
 <p>
@@ -37,6 +37,7 @@
 <p align=center>
 
    <strong><font color=#DF0101>
-    Bitte den eigenen Code nach obigen Muster in das Textfeld eintragen und die Eingabe mit Enter bestätigen.
+    Bitte den eigenen Code nach obigen Muster in das Textfeld eintragen und die Eingabe mit Enter bestätigen. 
+    Notiere dir den Code, da du ihn noch einmal für die Einwilligungserklärung deiner Eltern brauchst.
     </font></strong>
 </p>
