--- a/chunk_includes/anleitung.html
+++ b/chunk_includes/anleitung.html
@@ -1,7 +1,7 @@
 <div align=justify>
 <p>
-    Den folgenden Zeitungsartikel hat eine <strong>Praktikantin</strong>
-geschrieben. Versetz dich bitte in die Rolle eines    <strong>Lektors</strong> und korrigiere was dir auffällig oder
+    Den folgenden Zeitungsartikel hat eine <strong>Praktikant*in</strong>
+geschrieben. Versetz dich bitte in die Rolle einer    <strong>Lektor*in</strong> und korrigiere was dir auffällig oder
     unpassend für einen Zeitungsartikel in einer deutschen Zeitung erscheint.
 </p>
 <p>
@@ -11,6 +11,6 @@ geschrieben. Versetz dich bitte in die Rolle eines    <strong>Lektors</strong> u
 </p>
 <p>
    Du kannst dabei so viel schreiben, wie du willst. Das Textfeld kann an
-    einer rechten unteren Ecke per gehaltenem Mausklick größer gezogen werdenziehen.
+    einer rechten unteren Ecke per gehaltenem Mausklick größer gezogen werden.
 </p>
 </div>
