Anpassung Aktuelle Version erwachsene

--- a/chunk_includes/anleitung.html
+++ b/chunk_includes/anleitung.html
@@ -1,16 +1,16 @@
 <div align=justify>
 <p>
-    Den folgenden Zeitungsartikel hat eine <strong>Praktikantin</strong>
-geschrieben. Versetz dich bitte in die Rolle eines    <strong>Lektors</strong> und korrigiere was dir auffällig oder
+    Den folgenden Zeitungsartikel hat eine <strong>Praktikant*in</strong>
+geschrieben. Bitte in die Rolle einer <strong>Lektor*in</strong> versetzen und den Artikel korrigieren, wenn etwas auffällig oder
     unpassend für einen Zeitungsartikel in einer deutschen Zeitung erscheint.
 </p>
 <p>
-   <strong> Bitte lies den Text aufmerksam und benutzen die Textfelder neben dem
-    jeweiligen Absatz, um eventuelle Korrekturen vorzunehmen. Klick dafür
-    zuerst einmal auf das Textfeld, danach kann das Feld beschrieben werden.</strong>
+   <strong> Bitte den Text aufmerksam lesen und die Textfelder neben dem
+    jeweiligen Absatz benutzen, um eventuelle Korrekturen vorzunehmen. Dafür
+    zuerst einmal auf das Textfeld klicken, danach kann das Feld beschrieben werden.</strong>
 </p>
 <p>
-   Du kannst dabei so viel schreiben, wie du willst. Das Textfeld kann an
-    einer rechten unteren Ecke per gehaltenem Mausklick größer gezogen werdenziehen.
+   Man kann so viel schreiben, wie man möchte. Das Textfeld kann an
+    der rechten unteren Ecke per gehaltenem Mausklick vergrößert werden.
 </p>
 </div>
