--- a/chunk_includes/code.html
+++ b/chunk_includes/code.html
@@ -1,43 +1,21 @@
 <div align=justify>
 <p>
-    <strong>Wie vorher beschrieben werden die Daten nur anonymisiert gepeichert und weiterverarbeitet. Hierzu 
-    erstelle bitte einen 10-stelligen Code nach dem folgenden Muster:</strong>
+    <strong>Die Angaben sind anonym. Dafür benutzen wir nicht den jeweiligen Namen, sondern einen „Code“.</strong>
 </p>
 
-<p>
-    <strong>Beispiel Code (10-stellig):</strong>
-</p>
+<p> Bitten den Code folgendermaßen bilden:</p>
 
+<li>die ersten beiden Buchstaben des Vornamens der Mutter,</li><br>
+<li>den Tag des eigenen Geburtsdatums </li><br>
+<li>und die ersten beiden Buchstaben des eigenen Vornamens. </li><br>
 <p>
-    1. Der zweite und der letzte Buchstabe des Vornamens deiner Mutter (bei
-    „Elke“: „LE“). Ist dir der Name unbekannt, der zweite und der letzte Buchstabe des Vornamens
-    deiner Großmutter; ist dir auch dieser Name unbekannt: XX.
+    Beispiel: AN08PE für Anna (Vorname der Mutter), 08. Januar 1999 (eigenes Geburtsdatum), Peter (eigener Name)
+
 </p>
-<p>
-    2. Der zweite und der letzte Buchstabe des Vornamens deines Vaters (bei
-    „Martin“: „AN“). Ist dir der Name unbekannt, der zweite und der letzte
-    Buchstabe des Vornamens deinesGroßvaters; ist dir auch dieser Name unbekannt: XX.
-</p>
-<p>
-    3. Dein eigener Geburtstag (nur der Tag, zweistellig, z.B. „06“)
-</p>
-<p>
-    4. Der Geburtstag (zweistellig, s.o.) deiner Mutter, wenn unbekannt: deines
-    Vaters, wenn unbekannt: deiner Großmutter, wenn unbekannt: deines Großvaters (Bsp.: Alle
-    unbekannt: 00).
-</p>
-<p>
-    5. Der 3. und der letzte Buchstabe des Geburtsnamens deiner Mutter, bei
-    Unkenntnis: deines eigenen Nachnamens (bei „Müller“ LR)
-</p>
-<p>
-    Der Code im obigen Beispiel lautet also: LE AN 06 00 LR<strong></strong>
-</p>
-</div>
 <p align=center>
 
    <strong><font color=#DF0101>
-    Bitte den eigenen Code nach obigen Muster in das Textfeld eintragen und die Eingabe mit Enter bestätigen. 
-    Notiere dir den Code, da du ihn noch einmal für die Einwilligungserklärung deiner Eltern brauchst.
+    Bitte den eigenen Code nach obigem Muster in das Textfeld eintragen.
     </font></strong>
 </p>
+</div>
