--- a/chunk_includes/consent.html
+++ b/chunk_includes/consent.html
@@ -5,7 +5,7 @@ Bevor es losgeht, bitte das <strong>Proband*inneninformationsblatt und die Einwi
 </p>
 </div>
 <p>
-    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Information_Einverst%c3%a4ndnis_Datenschutz_Erwachsene_D.pdf" target="_blank">Probandeninformationsblatt</a>
+    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Information_Einverst%c3%a4ndnis_Datenschutz_Jugendliche_D.pdf" target="_blank">Probandeninformationsblatt</a>
 </p>
 <p>
   <input type="checkbox" id="probandinfo" name="Infoblatt" class="obligatory">
@@ -14,11 +14,20 @@ Bevor es losgeht, bitte das <strong>Proband*inneninformationsblatt und die Einwi
   <P><label class="error" for="Infoblatt"></label></P>
   
 <p>
-    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Einverst%c3%a4ndnis_Erwachsene_D.pdf" target="_blank">Einwilligungserklärung</a>
+    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Einverst%c3%a4ndnis_Jugendliche_D.pdf" target="_blank">Einwilligungserklärung</a>
 </p>
 <p>
   <input type="checkbox" id="Einwilligung" name="Einwilligung" class="obligatory">
   <label for="Einwilligung">Ich habe die Einwilligungserklärung gelesen, verstanden und akzeptiert.</label>
  </p>
   <P><label class="error" for="Einwilligung"></label></P>
-
+</p>
+<p>
+<input type="checkbox" id="elterninfo" name="elterninfo" class="obligatory">
+   <li>Meine Eltern haben die oben genannte Probandeninformation  
+    <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Information_Einverst%c3%a4ndnis_Datenschutz_Jugendliche_D.pdf">heruntergeladen</a> 
+    und zur Kenntnis genommen</li><br>
+    </p>
+<p>
+   <input type="checkbox" id="uploadeinverständnis" name="uploadeinverständnis" class="obligatory">
+   <li>Die  <a href="https://amor.cms.hu-berlin.de/~idlsfbnd/zeitungsstudie/Einverst%c3%a4ndnis_Jugendliche_D.pdf">Einwilligungserklärung</a>wurde auf die <a href="https://box.hu-berlin.de/u/d/d01881378a224e088cb7/">HU-Box geladen</a></li><br>
