--- a/chunk_includes/zustimmung.html
+++ b/chunk_includes/zustimmung.html
@@ -1,4 +1,5 @@
- <div align=justify>
+<!DOCTYPE html> 
+<div align=justify>
  
  <li>Ich habe das Proband*inneninformationsblatt gelesen, fühle mich ausreichend
     informiert und habe verstanden, worum es geht.</li><br>
